# FlashPages

./: .gitignore  .replit  README.md  config.yaml  main.py  pyproject.toml  replit.md
app/: apps_router.py  builder.py  deps.py  models.py  security.py
app/api/: forms.py
app/cms/: forms.py  routes.py
app/public/: routes.py
app/services/: component_processor.py  content_loader.py  git_repo.py  markdown.py  nav.py  search.py
apps/: test_dashboard.py
attached_assets/: Pasted-Got-it-Mzee-Here-s-a-clean-practical-spec-you-can-hand-to-a-dev-or-build-yourself-to-get-this--1755536796428_1755536796429.txt
content/data/: team.yml
content/pages/: ahmed.md  blog-example.md  component-guide.md  components.md  data-editor-example.md  getting-started.md  index.md  landing-example.md
static/css/: custom.css
static/js/: app.js  flashpages-core.js
templates/apps/: app_layout.html
templates/cms/: diff.html  editor.html  forms.html  index.html  login.html  preview.html  settings.html
templates/components/: alert.html  card.html  table.html
templates/layouts/: base.html  docs.html  landing.html
templates/partials/: footer.html  head.html  header.html  sidebar.html
